Fixed roadmap container (better view on mobile) and added footer comunity links

--- a/css/roadmap.css
+++ b/css/roadmap.css
@@ -99,7 +99,7 @@ ul > li > p > a:hover {
 	padding: 50px 0 50px;
 }
 
-.roadmap-block .container {
+.roadmap-block .container-roadmap {
 	max-width: 865px;
 }
 
